Add o esqueleto do bot e do chatGPT

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "chatgpt": "^4.7.2",
     "discord.js": "^14.7.1",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "esm": "^3.2.25"
   },
   "name": "bot-discord-estudo",
   "version": "1.0.0",
