--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "version": "1.0.0",
   "description": "Bot para discord",
   "main": "index.js",
+ "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
